--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -35,4 +35,5 @@ artifacts:
     - '/workspace/artifacts.json'
 options:
   machineType: E2_HIGHCPU_8
+  logging: CLOUD_LOGGING_ONLY
 timeout: 3600s
